--- a/packages/languages/package.json
+++ b/packages/languages/package.json
@@ -6,6 +6,7 @@
     "@theia/core": "^0.3.8",
     "@theia/output": "^0.3.8",
     "@theia/process": "^0.3.8",
+    "@theia/workspace": "^0.3.8",
     "vscode-base-languageclient": "^0.0.1-alpha.3",
     "vscode-languageserver-protocol": "^3.6.0"
   },
